# gods-number-cuda

./: .gitignore  CMakeLists.txt  README.md
docs/: diameter_lower_bound_tech_spec.md  empirical_diameter_bounds.md  gods_number_tech_spec.md
src/: diameter_bounds.hpp  gpu_tables.cuh  main.cu  move_tables.cuh  solve_general.cuh  state_codec.cuh
